# study-web-application-development-with-rust

./: .gitignore  Cargo.toml  Makefile.toml  compose.yaml
adapter/: Cargo.toml
adapter/migrations/: 20241016075930_start.down.sql  20241016075930_start.up.sql
adapter/src/database/model/: auth.rs  book.rs  checkout.rs  mod.rs
adapter/src/redis/: mod.rs
adapter/src/repository/: auth.rs  book.rs  checkout.rs  mod.rs  user.rs
adapter/src/repository/fixtures/: book.sql
api/: Cargo.toml
api/src/: extractor.rs  lib.rs  openapi.rs
api/src/handler/: auth.rs  book.rs  checkout.rs  user.rs
api/src/model/: book.rs  mod.rs  user.rs
api/src/route/: book.rs  user.rs
api/tests/api/: book.rs  helper.rs
data/: initial_setup.sql
helloworld/: Dockerfile  Makefile.toml  compose.yaml
kernel/: Cargo.toml
kernel/src/model/: id.rs  role.rs
kernel/src/model/book/: event.rs  mod.rs
kernel/src/model/checkout/: event.rs
kernel/src/model/user/: event.rs  mod.rs
kernel/src/repository/: auth.rs  book.rs  checkout.rs  user.rs
registry/: Cargo.toml
registry/src/: lib.rs
rstest-example/: Cargo.toml
rstest-example/src/: lib.rs
rusty-book-manager/: Cargo.toml  Dockerfile  Makefile.toml  compose.yaml
rusty-book-manager/.github/workflows/: ci.yaml
rusty-book-manager/frontend/: package.json
rusty-book-manager/src/: main.rs
shared/src/: config.rs  env.rs  error.rs
sqlx-test-example/: Cargo.toml
sqlx-test-example/migrations/: 20241102063218_setup.sql
sqlx-test-example/src/: lib.rs
sqlx-test-example/src/fixtures/: common.sql
